--- a/BlazorClient_Todo/Client/Pages/AddTodo.razor
+++ b/BlazorClient_Todo/Client/Pages/AddTodo.razor
@@ -19,7 +19,16 @@
         </div>
         <div class="form-group row">
             <div class="col-sm-10">
-                <button class="btn btn-primary" @onclick="SubmitTodo">Add Todo</button>
+                @*<button class="btn btn-primary" @onclick="SubmitTodo">Add Todo</button>*@
+                @*ternary operator to handle update or add*@
+                @if (Edit)
+                {
+                    <button class="btn btn-primary" @onclick="UpdateTodos">Update Todo</button>
+                }
+                else
+                {
+                    <button class="btn btn-primary" @onclick="SubmitTodo">Add Todo</button>
+                }
             </div>
         </div>
 </div>
@@ -29,19 +38,40 @@
         {
             Id = Guid.NewGuid(),
         };
-
+    public bool Edit { get; set; } = false;
     [Parameter]
     public EventCallback<TodoDto> OnTodoCreate { get; set; }
+
+    [Parameter]
+    public EventCallback<TodoDto> OnTodoUpdate { get; set; }
+
+    [Parameter]
+    public TodoDto UpdateTodo {
+        get => newTodo;
+        set
+        {
+            newTodo = value ?? newTodo;
+            Edit = value != null;
+        }
+    }
 
     private async Task SubmitTodo()
     {
         await OnTodoCreate.InvokeAsync(newTodo);
-
         //reset the todo
-        newTodo = new TodoDto()
-        {
-            Id = Guid.NewGuid(),
-        };
+        newTodo = new TodoDto();
+    }
+
+    private async Task UpdateTodos()
+    {
+        await OnTodoUpdate.InvokeAsync(newTodo);
+        //reset the todo
+        ResetTodo();
+    }
+    private void ResetTodo()
+    {
+        newTodo = new TodoDto();
+        Edit = false;
     }
 
 }
