--- a/BlazorClient_Todo/Client/Pages/DisplayTodo.razor
+++ b/BlazorClient_Todo/Client/Pages/DisplayTodo.razor
@@ -1,11 +1,12 @@
-﻿    <div class="card">
+﻿@*@inject NavigationManager navigationManager*@
+<div class="card">
       <div class="card-body">
         <h4 class="card-title card-header">@newTodo.Title</h4>
         <p class="card-text">@newTodo.Description</p>
         Posted on: <span class="font-weight-bold"><cite>@newTodo.CreatedAt.ToShortDateString()</cite></span>
         <div class="flex-column justify-content-around">
-            <a href="#" @onclick="HandleEdit" class="btn btn-primary">Edit</a>
-            <a href="#" @onclick="HandleDelete" class="btn btn-danger">Delete</a>
+            <button @onclick="(() => HandleEdit(newTodo))" class="btn btn-primary">Edit</button>
+            <button @onclick="HandleDelete" class="btn btn-danger">Delete</button>
         </div>
       </div>
     </div>
@@ -17,17 +18,22 @@
     [Parameter]
     public EventCallback<TodoDto> OnTodoDelete { get; set; }
 
-
     [Parameter]
-    public EventCallback<TodoDto> OnTodoEdit { get; set; }
+    public EventCallback<TodoDto> OnTodoUpdate { get; set; }
+
 
     private async Task HandleDelete()
     {
         await OnTodoDelete.InvokeAsync(newTodo);
     }
 
-    private async void HandleEdit()
+    // update todo
+    public async Task HandleEdit(TodoDto todoDto)
     {
-        await OnTodoEdit.InvokeAsync(newTodo);
+        await OnTodoUpdate.InvokeAsync(todoDto);
+        //navigate to update page
+        //navigationManager.NavigateTo($"/update/{newTodo.Id}");
     }
+
+    //
 }
