--- a/BlazorClient_Todo/Client/Pages/TodosView.razor
+++ b/BlazorClient_Todo/Client/Pages/TodosView.razor
@@ -1,19 +1,18 @@
 ﻿@page "/"
+
 <div class="row">
     <div class="input-form col-6">
-        <AddTodo OnTodoCreate="TodoCreateHandler" />
+        <AddTodo OnTodoCreate="TodoCreateHandler" UpdateTodo="updateTodo" OnTodoUpdate="Updating" />
     </div>
-    
-<div class="todo-list col-6">
-    @foreach (var todo in todos)
-    {
-            <DisplayTodo newTodo="todo" OnTodoDelete="HandleTodoDelete"/>
-    }
 
+    <div class="todo-list col-6">
+        @foreach (var todo in todos)
+        {
+            <DisplayTodo newTodo="todo" OnTodoDelete="HandleTodoDelete" OnTodoUpdate="HandleUpdate" />
+        }
+
+    </div>
 </div>
-</div>
-
-
 
 @code {
 
@@ -23,6 +22,8 @@
     {
         this.todos.Add(newTodo);
     }
+
+    public TodoDto updateTodo;
 
     public void HandleTodoDelete(TodoDto todo)
     {
@@ -37,5 +38,15 @@
         }
     }
 
+    public async void HandleUpdate(TodoDto todo)
+    {
+        updateTodo = todo;
+    }
 
+public async void Updating(TodoDto todo)
+    {
+        var index = todos.IndexOf(todo);
+        todos[index] = todo;
+        updateTodo = null;
+    }
 }
